--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -62,10 +62,11 @@
 
 
             <TextView
+                android:id="@+id/btnRecover"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingVertical="8dp"
                 android:layout_marginEnd="20dp"
+                android:paddingVertical="8dp"
                 android:text="Recuper conta"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -74,6 +75,7 @@
                 app:layout_constraintVertical_bias="0.58" />
 
             <TextView
+                android:id="@+id/btnRegister"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="292dp"
@@ -88,6 +90,7 @@
 
 
     </LinearLayout>
+
 
 
 </FrameLayout>
