Feat: criação do banco de dados para fazer autenticação dos usuarios junto com restante da navegação entre as telas

--- a/app/src/main/res/layout/fragment_recover_account.xml
+++ b/app/src/main/res/layout/fragment_recover_account.xml
@@ -48,8 +48,10 @@
                 android:textColor="@color/white" />
 
             <EditText
+                android:id="@+id/addEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
                 android:layout_marginTop="8dp"
                 android:background="@drawable/bg_edit"
                 android:hint="Email@email.com"
@@ -58,6 +60,7 @@
 
 
             <Button
+                android:id="@+id/btnSend"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
@@ -66,6 +69,16 @@
                 android:textAllCaps="false"
                 android:textColor="@color/color_default"
                 app:backgroundTint="@null" />
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="invisible"
+                tools:visibility="visible"
+                android:indeterminateTint="@color/white"
+                android:layout_marginTop="8dp"
+                android:layout_gravity="center_horizontal"/>
 
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
