--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -21,9 +21,11 @@
             android:textColor="@color/white"/>
 
         <EditText
+            android:id="@+id/addEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:inputType="textEmailAddress"
             android:hint="Email@email.com"
             android:textSize="14sp"
             android:background="@drawable/bg_edit"
@@ -37,15 +39,18 @@
             android:textColor="@color/white"/>
 
         <EditText
+            android:id="@+id/addSenha"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/bg_edit"
             android:layout_marginTop="8dp"
+            android:inputType="textPassword"
             android:hint="*******"
             android:textSize="14sp"
             android:padding="14dp"/>
 
         <Button
+            android:id="@+id/btnlogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Login"
@@ -88,9 +93,17 @@
                 app:layout_constraintVertical_bias="0.0" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            tools:visibility="visible"
+            android:indeterminateTint="@color/white"
+            android:layout_marginTop="8dp"
+            android:layout_gravity="center_horizontal"/>
 
     </LinearLayout>
-
 
 
 </FrameLayout>
