--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -48,10 +48,12 @@
                 android:textColor="@color/white" />
 
             <EditText
+                android:id="@+id/addEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:background="@drawable/bg_edit"
+                android:inputType="textEmailAddress"
                 android:hint="Email@email.com"
                 android:padding="14dp"
                 android:textSize="14sp" />
@@ -64,15 +66,18 @@
                 android:textColor="@color/white" />
 
             <EditText
+                android:id="@+id/addSenha"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:background="@drawable/bg_edit"
+                android:inputType="textPassword"
                 android:hint="*******"
                 android:padding="14dp"
                 android:textSize="14sp" />
 
             <Button
+                android:id="@+id/btnCriar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
@@ -81,6 +86,17 @@
                 android:textAllCaps="false"
                 android:textColor="@color/color_default"
                 app:backgroundTint="@null" />
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="invisible"
+                tools:visibility="visible"
+                android:indeterminateTint="@color/white"
+                android:layout_marginTop="8dp"
+                android:layout_gravity="center_horizontal"/>
+
 
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
