--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -12,7 +12,10 @@
         tools:layout="@layout/fragment_splash" >
         <action
             android:id="@+id/action_splashFragment_to_loginFragment"
-            app:destination="@id/loginFragment" />
+
+        app:destination="@id/loginFragment"
+        app:popUpTo="@id/splashFragment"
+        app:popUpToInclusive="true"/>
     </fragment>
     <fragment
         android:id="@+id/loginFragment"
@@ -25,6 +28,11 @@
         <action
             android:id="@+id/action_loginFragment_to_recoverAccountFragment"
             app:destination="@id/recoverAccountFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_homeFragment"
+            app:destination="@id/homeFragment"
+            app:popUpTo="@id/loginFragment"
+            app:popUpToInclusive="true"/>
     </fragment>
     <fragment
         android:id="@+id/recoverAccountFragment"
@@ -35,5 +43,16 @@
         android:id="@+id/registerFragment"
         android:name="com.example.listascolaborativas.ui.auth.RegisterFragment"
         android:label="fragment_register"
-        tools:layout="@layout/fragment_register" />
-</navigation>
+    tools:layout="@layout/fragment_register" >
+    <action
+        android:id="@+id/action_registerFragment_to_homeFragment"
+        app:destination="@id/homeFragment"
+        app:popUpTo="@id/loginFragment"
+        app:popUpToInclusive="true"/>
+</fragment>
+<fragment
+android:id="@+id/homeFragment"
+android:name="com.example.listascolaborativas.ui.HomeFragment"
+android:label="fragment_home"
+tools:layout="@layout/fragment_home" />
+    </navigation>
