--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -12,10 +12,12 @@
         tools:layout="@layout/fragment_splash" >
         <action
             android:id="@+id/action_splashFragment_to_loginFragment"
-
-        app:destination="@id/loginFragment"
-        app:popUpTo="@id/splashFragment"
-        app:popUpToInclusive="true"/>
+            app:destination="@id/loginFragment"
+            app:popUpTo="@id/splashFragment"
+            app:popUpToInclusive="true"/>
+        <action
+            android:id="@+id/action_splashFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
     </fragment>
     <fragment
         android:id="@+id/loginFragment"
@@ -32,7 +34,7 @@
             android:id="@+id/action_loginFragment_to_homeFragment"
             app:destination="@id/homeFragment"
             app:popUpTo="@id/loginFragment"
-            app:popUpToInclusive="true"/>
+            app:popUpToInclusive="true"/>/>
     </fragment>
     <fragment
         android:id="@+id/recoverAccountFragment"
@@ -43,16 +45,21 @@
         android:id="@+id/registerFragment"
         android:name="com.example.listascolaborativas.ui.auth.RegisterFragment"
         android:label="fragment_register"
-    tools:layout="@layout/fragment_register" >
-    <action
-        android:id="@+id/action_registerFragment_to_homeFragment"
-        app:destination="@id/homeFragment"
-        app:popUpTo="@id/loginFragment"
-        app:popUpToInclusive="true"/>
-</fragment>
-<fragment
-android:id="@+id/homeFragment"
-android:name="com.example.listascolaborativas.ui.HomeFragment"
-android:label="fragment_home"
-tools:layout="@layout/fragment_home" />
-    </navigation>
+        tools:layout="@layout/fragment_register" >
+        <action
+            android:id="@+id/action_registerFragment_to_homeFragment"
+            app:destination="@id/homeFragment"
+            app:popUpTo="@id/loginFragment"
+            app:popUpToInclusive="true"/>
+    </fragment>
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="com.example.listascolaborativas.ui.HomeFragment"
+        android:label="fragment_home"
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_homeFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
+    </fragment>
+
+</navigation>
