--- a/app/src/main/res/layout/fragment_add_lista.xml
+++ b/app/src/main/res/layout/fragment_add_lista.xml
@@ -61,14 +61,14 @@
                 android:id="@+id/edtTituloLista"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
                 android:background="@drawable/bg_edit"
                 android:hint="Digite o título da sua lista"
                 android:padding="14dp"
                 android:textSize="14sp"
+                android:layout_marginTop="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView" />
+                app:layout_constraintTop_toBottomOf="@+id/textTituloLista" />
 
             <Button
                 android:id="@+id/btnSave"
