--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -63,11 +63,19 @@
         <action
             android:id="@+id/action_homeFragment_to_addListaFragment"
             app:destination="@id/addListaFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_detailListaFragment"
+            app:destination="@id/detailListaFragment" />
     </fragment>
     <fragment
         android:id="@+id/addListaFragment"
         android:name="com.example.listascolaborativas.ui.AddListaFragment"
         android:label="fragment_add_lista"
         tools:layout="@layout/fragment_add_lista" />
+    <fragment
+        android:id="@+id/detailListaFragment"
+        android:name="com.example.listascolaborativas.ui.DetailListaFragment"
+        android:label="fragment_detail_lista"
+        tools:layout="@layout/fragment_detail_lista" />
 
 </navigation>
