--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -76,6 +76,10 @@
         android:id="@+id/detailListaFragment"
         android:name="com.example.listascolaborativas.ui.DetailListaFragment"
         android:label="fragment_detail_lista"
-        tools:layout="@layout/fragment_detail_lista" />
+        tools:layout="@layout/fragment_detail_lista" >
+        <action
+            android:id="@+id/action_detailListaFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+    </fragment>
 
 </navigation>
