--- a/app/src/main/res/layout/fragment_detail_lista.xml
+++ b/app/src/main/res/layout/fragment_detail_lista.xml
@@ -1,20 +1,22 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.DetailListaFragment"
-    android:padding="6dp">
-
-    <!-- Header -->
+    android:padding="6dp"
+    tools:context=".ui.DetailListaFragment">
+    <!--  Header  -->
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
+        android:id="@+id/constraintLayout"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="16dp">
-
-        <!-- Nome da Lista -->
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+        <!--  Nome da Lista  -->
         <TextView
             android:id="@+id/textTitulo"
             android:layout_width="0dp"
@@ -26,8 +28,7 @@
             app:layout_constraintEnd_toStartOf="@id/btnEditar"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <!-- Botão Editar -->
+        <!--  Botão Editar  -->
         <Button
             android:id="@+id/btnEditar"
             android:layout_width="wrap_content"
@@ -36,32 +37,33 @@
             android:padding="8dp"
             android:text="Editar"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/btnExcluir" />
-
-        <!-- Botão Excluir -->
+            app:layout_constraintEnd_toStartOf="@id/btnExcluir"
+            app:layout_constraintTop_toTopOf="parent" />
+        <!--  Botão Excluir  -->
         <Button
             android:id="@+id/btnExcluir"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Excluir"
             android:layout_marginHorizontal="6dp"
+            android:text="Excluir"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <!-- RecyclerView (corpo) -->
+    <!--  RecyclerView para listar os itens  -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewItensLista"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="72dp"
         android:padding="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/textTitulo"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <!-- Botão Flutuante -->
+        app:layout_constraintTop_toBottomOf="@id/constraintLayout"
+        tools:listitem="@layout/item_adapter" />
+    <!--  Botão Flutuante para adicionar itens  -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btnFlutuanteAdd"
         android:layout_width="wrap_content"
@@ -73,5 +75,4 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:tint="@color/color_default" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
