--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -34,7 +34,7 @@
             android:id="@+id/action_loginFragment_to_homeFragment"
             app:destination="@id/homeFragment"
             app:popUpTo="@id/loginFragment"
-            app:popUpToInclusive="true"/>/>
+            app:popUpToInclusive="true"/>
     </fragment>
     <fragment
         android:id="@+id/recoverAccountFragment"
@@ -80,6 +80,13 @@
         <action
             android:id="@+id/action_detailListaFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_detailListaFragment_to_itemFragment"
+            app:destination="@id/itemFragment" />
     </fragment>
-
+    <fragment
+        android:id="@+id/itemFragment"
+        android:name="com.example.listascolaborativas.ui.ItemFragment"
+        android:label="ItemFragment"
+        tools:layout="@layout/fragment_item"/>
 </navigation>
