feat: adiciona funcao de marcar o item como concluido

--- a/app/src/main/res/layout/item_adapter.xml
+++ b/app/src/main/res/layout/item_adapter.xml
@@ -2,16 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="8dp">
+    android:orientation="horizontal"
+    android:padding="10dp">
+
+    <CheckBox
+        android:id="@+id/checkboxItem"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp" />
 
     <TextView
         android:id="@+id/ItemNome"
-        android:layout_marginTop="19dp"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Nome do Item"
+        android:layout_weight="1"
         android:textSize="16sp"
-        android:textColor="@color/black" />
-
+        android:text="Item Name" />
 </LinearLayout>
