--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,109 +1,120 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:fillViewport="true"
-    tools:context=".ui.auth.LoginFragment">
+    android:orientation="vertical"
+    android:gravity="center"
+    android:padding="20dp"
+    android:background="@color/light_gray">
 
-    <LinearLayout
+    <!-- Logo -->
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/black_ic_logo"
+        android:layout_gravity="center_horizontal"
+        android:contentDescription="Logo do app"/>
+
+    <!-- Título -->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ShareList"
+        android:textSize="28sp"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:layout_marginTop="17dp"
+        android:layout_gravity="center_horizontal"
+        tools:visibility="visible"
+        android:fontFamily="@font/poppins"/>
+
+    <!-- Campo Email -->
+    <EditText
+        android:id="@+id/addEmail"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="16dp"
-        android:gravity="center"
-        android:orientation="vertical">
+        android:layout_height="50dp"
+        android:background="@drawable/input_background"
+        android:drawablePadding="10dp"
+        android:fontFamily="@font/poppins"
+        android:hint="Email"
+        android:inputType="textEmailAddress"
+        android:textColorHint="@color/black"
+        android:padding="10dp"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        tools:visibility="visible" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Email"
-            android:textColor="@color/white"/>
+    <!-- Campo Senha -->
+    <EditText
+        android:id="@+id/addSenha"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@drawable/input_background"
+        android:fontFamily="@font/poppins"
+        android:hint="Senha"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
+        android:inputType="textPassword"
+        android:padding="10dp"
+        android:textSize="16sp"
+        android:layout_marginTop="16dp"
+        android:textAlignment="center"/>
 
-        <EditText
-            android:id="@+id/addEmail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:inputType="textEmailAddress"
-            android:hint="Email@email.com"
-            android:textSize="14sp"
-            android:background="@drawable/bg_edit"
-            android:padding="14dp"/>
+    <!-- Link "Esqueci a senha" -->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Esqueci a senha!"
+        android:textColor="@color/blue"
+        android:layout_gravity="end"
+        android:layout_marginTop="4dp"
+        android:id="@+id/btnRecover"
+        android:fontFamily="@font/poppins"/>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="Senha"
-            android:textColor="@color/white"/>
+    <!-- Botão de Login -->
+    <Button
+        android:layout_width="250dp"
+        android:id="@+id/btnlogin"
+        android:layout_height="48dp"
+        android:text="Tudo Pronto!"
+        android:background="@drawable/button_purple"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/poppins"/>
 
-        <EditText
-            android:id="@+id/addSenha"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/bg_edit"
-            android:layout_marginTop="8dp"
-            android:inputType="textPassword"
-            android:hint="*******"
-            android:textSize="14sp"
-            android:padding="14dp"/>
+    <!-- Texto de cadastro -->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Não tem uma conta?"
+        android:textSize="14sp"
+        android:layout_marginTop="16dp"
+        android:layout_gravity="center_horizontal"/>
 
-        <Button
-            android:id="@+id/btnlogin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Login"
-            android:textColor="@color/color_default"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/bg_button"
-            app:backgroundTint="@null"
-            android:textAllCaps="false"/>
+    <!-- Link "Cadastre-se!" -->
+    <TextView
+        android:id="@+id/btnRegister"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Cadastre-se!"
+        android:textColor="@color/blue"
+        android:textStyle="bold"
+        android:textSize="16sp"
+        android:layout_gravity="center_horizontal"
+        android:fontFamily="@font/poppins"/>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        tools:visibility="visible"
+        android:indeterminateTint="@color/black"
+        android:layout_marginTop="8dp"
+        android:layout_gravity="center_horizontal"/>
 
-
-            <TextView
-                android:id="@+id/btnRecover"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="20dp"
-                android:paddingVertical="8dp"
-                android:text="Recuper conta"
-                android:textColor="@color/white"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.58" />
-
-            <TextView
-                android:id="@+id/btnRegister"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="292dp"
-                android:paddingVertical="8dp"
-                android:text="Criar conta"
-                android:textColor="@color/white"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <ProgressBar
-            android:id="@+id/progressBar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="invisible"
-            tools:visibility="visible"
-            android:indeterminateTint="@color/white"
-            android:layout_marginTop="8dp"
-            android:layout_gravity="center_horizontal"/>
-
-    </LinearLayout>
-
-
-</FrameLayout>
+</LinearLayout>
