--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -106,7 +106,7 @@
 
     <!-- Link "Entrar" -->
     <TextView
-        android:id="@+id/btnRegister"
+        android:id="@+id/btnBackToLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Entrar!"
