--- a/app/src/main/res/layout/lista_adapter.xml
+++ b/app/src/main/res/layout/lista_adapter.xml
@@ -41,8 +41,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="6dp"
-                android:backgroundTint="@color/color_details"
+                android:backgroundTint="@color/white"
                 android:text="Detalhar"
+                android:textColor="@color/black"
                 android:layout_marginHorizontal="6dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
