--- a/app/src/main/res/drawable/button_purple.xml
+++ b/app/src/main/res/drawable/button_purple.xml
@@ -2,13 +2,13 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/purple_light" />
+            <solid android:color="@color/purple" />
             <corners android:radius="16dp"/>
         </shape>
     </item>
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/purple_light" />
+            <solid android:color="@color/purple" />
             <corners android:radius="16dp"/>
         </shape>
     </item>
