--- a/app/src/main/res/layout/fragment_detail_lista.xml
+++ b/app/src/main/res/layout/fragment_detail_lista.xml
@@ -1,78 +1,152 @@
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="6dp"
     tools:context=".ui.DetailListaFragment">
-    <!--  Header  -->
+
+
+    <!-- Layout principal -->
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <EditText
-            android:id="@+id/editTituloLista"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="Digite o título"
-            android:textSize="24sp"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <Button
-            android:id="@+id/btnSalvarAlteracoes"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Salvar"
-            app:layout_constraintEnd_toStartOf="@+id/btnExcluir" />
-
-        <!--  Botão Excluir  -->
-        <Button
-            android:id="@+id/btnExcluir"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="6dp"
-            android:text="Excluir"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/dark_gray">
 
 
-    <!--  RecyclerView para listar os itens  -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewItensLista"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="72dp"
-        android:padding="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/constraintLayout"
-        tools:listitem="@layout/item_adapter" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/purple">
 
 
-    <!--  Botão Flutuante para adicionar itens  -->
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/btnFlutuanteAdd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:backgroundTint="@color/white"
-        android:src="@drawable/ic_add"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:tint="@color/color_default" />
+            <!-- Header -->
+            <RelativeLayout
+                android:id="@+id/relativeLayoutHeader"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/purple"
+                android:padding="16dp"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toTopOf="parent">
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+                <TextView
+                    android:id="@+id/tituloHeaderApp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Detalhes da Lista"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:fontFamily="@font/poppins"
+                    android:layout_alignParentStart="true" />
+
+
+                <View
+                    android:id="@+id/divider"
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:layout_below="@id/tituloHeaderApp"
+                    android:layout_marginTop="8dp"
+                    android:background="@color/light_gray" />
+            </RelativeLayout>
+
+
+            <!-- Container para edição da lista -->
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/constraintLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginTop="15dp"
+                app:layout_constraintTop_toBottomOf="@id/relativeLayoutHeader"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent">
+
+
+                <EditText
+                    android:id="@+id/editTituloLista"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:hint="Digite o título"
+                    android:textSize="24sp"
+                    android:textColorHint="@color/dark_gray"
+                    android:padding="12dp"
+                    android:textColor="@color/black"
+                    android:background="@drawable/rounded_edit_text"
+                    android:elevation="2dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" />
+
+
+                <!-- Container para botões -->
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:orientation="horizontal"
+                    app:layout_constraintTop_toBottomOf="@id/editTituloLista"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent">
+
+
+                    <Button
+                        android:id="@+id/btnSalvarAlteracoes"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Salvar"
+                        android:backgroundTint="@color/purple_lighter"
+                        android:textColor="@color/white"
+                        android:paddingHorizontal="16dp" />
+
+
+                    <Button
+                        android:id="@+id/btnExcluir"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:backgroundTint="@color/purple_lighter"
+                        android:textColor="@color/white"
+                        android:text="Excluir"
+                        android:layout_marginStart="8dp"
+                        android:paddingHorizontal="16dp" />
+                </LinearLayout>
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+            <!-- RecyclerView para listar os itens -->
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerViewItensLista"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginTop="16dp"
+                android:padding="8dp"
+                android:background="@color/light_gray"
+                app:layout_constraintTop_toBottomOf="@id/constraintLayout"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                tools:listitem="@layout/item_adapter" />
+
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/btnFlutuanteAdd"
+                android:layout_width="wrap_content"
+                android:layout_height="56dp"
+                android:layout_margin="16dp"
+                android:translationY="-50dp"
+                android:backgroundTint="@color/white"
+                android:src="@drawable/ic_add"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:tint="@color/color_default"
+                android:elevation="6dp"/> <!-- Adicione uma elevação -->
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout> <!-- Fechamento correto deste ConstraintLayout -->
+
+
+</FrameLayout>
