--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,14 +10,14 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/black">
+        android:background="@color/purple">
 
         <!-- Header -->
         <RelativeLayout
             android:id="@+id/relativeLayoutHeader"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/black"
+            android:background="@color/purple"
             android:padding="16dp"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toTopOf="parent">
