--- a/app/src/main/res/layout/lista_adapter.xml
+++ b/app/src/main/res/layout/lista_adapter.xml
@@ -12,6 +12,7 @@
         android:layout_marginVertical="8dp"
         app:cardCornerRadius="15dp"
         app:cardElevation="5dp"
+        app:cardBackgroundColor="@color/purple"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,7 +20,9 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:outlineAmbientShadowColor="@color/purple">
+
 
             <TextView
                 android:id="@+id/textTituloLista"
@@ -28,7 +31,7 @@
                 android:layout_margin="16dp"
                 android:ellipsize="end"
                 android:maxLines="2"
-
+                android:textColor="@color/white"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -41,9 +44,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="6dp"
-                android:backgroundTint="@color/white"
+                android:backgroundTint="@color/purple_lighter"
                 android:text="Detalhar"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:layout_marginHorizontal="6dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
