--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -74,6 +74,9 @@
         <action
             android:id="@+id/action_homeFragment_to_detailListaFragment"
             app:destination="@id/detailListaFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_ciclosFragment"
+            app:destination="@id/ciclosFragment" />
     </fragment>
 
     <fragment
@@ -110,4 +113,9 @@
         android:name="com.example.listascolaborativas.ui.EditItemFragment"
         android:label="EditItemFragment"
         tools:layout="@layout/fragment_edit_item"/>
+    <fragment
+        android:id="@+id/ciclosFragment"
+        android:name="com.example.listascolaborativas.ui.CiclosFragment"
+        android:label="CiclosFragment"
+        tools:layout="@layout/fragment_ciclos"/>
 </navigation>
