--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:background="@color/purple"
             android:padding="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="50dp"
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
@@ -28,20 +28,21 @@
                 android:layout_height="wrap_content"
                 android:text="ShareList"
                 android:textColor="@color/white"
-                android:textSize="18sp"
+                android:textSize="30sp"
                 android:textStyle="bold"
                 android:fontFamily="@font/poppins"
-                android:layout_alignParentStart="true"/>
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"/>
 
             <ImageView
                 android:id="@+id/btnLogout"
-                android:layout_width="28dp"
-                android:layout_height="48dp"
-                android:src="@drawable/ic_logout"
-                android:tint="@color/white"
-                android:layout_alignParentEnd="true"/>
-
-
+                android:layout_width="wrap_content"
+                android:layout_height="49dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="189dp"
+                android:layout_toEndOf="@+id/tituloHeaderApp"
+                android:src="@drawable/ic_logout" />
         </RelativeLayout>
 
         <!-- RecyclerView para exibir listas -->
