--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:background="@color/purple"
             android:padding="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="40dp"
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
@@ -28,18 +28,10 @@
                 android:layout_height="wrap_content"
                 android:text="Adicionar Item"
                 android:textColor="@color/white"
-                android:textSize="18sp"
+                android:textSize="25sp"
                 android:textStyle="bold"
                 android:fontFamily="@font/poppins"
                 android:layout_alignParentStart="true" />
-
-            <View
-                android:id="@+id/divider"
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:layout_below="@id/tituloHeaderApp"
-                android:layout_marginTop="8dp"
-                android:background="@color/light_gray" />
         </RelativeLayout>
 
         <!-- Conteúdo rolável -->
@@ -62,42 +54,39 @@
                     android:layout_height="wrap_content"
                     android:text="Nome do Item"
                     android:textColor="@color/black"
-                    android:textSize="16sp"
+                    android:textSize="25sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageButton
+                    android:id="@+id/btnSaveItem"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/ic_save"
+                    android:background="@android:color/transparent"
+                    android:contentDescription="Salvar item"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/textTituloItem"
+                    app:layout_constraintBottom_toBottomOf="@id/textTituloItem" />
 
                 <EditText
                     android:id="@+id/edtItemNome"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/rounded_edit_text"
+                    android:background="@drawable/white_background_purple_border"
                     android:hint="Digite o nome do item"
                     android:textColorHint="@color/dark_gray"
-                    android:padding="14dp"
-                    android:textSize="16sp"
+                    android:padding="20dp"
+                    android:textSize="20sp"
                     android:elevation="2dp"
                     android:textColor="@color/black"
                     android:inputType="text"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/textTituloItem"
-                    android:layout_marginTop="8dp" />
+                    android:layout_marginTop="24dp" />
 
-                <Button
-                    android:id="@+id/btnSaveItem"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/button_purple"
-                    android:text="Salvar"
-                    android:textAllCaps="false"
-                    android:textColor="@color/white"
-                    android:textSize="16sp"
-                    android:elevation="4dp"
-                    android:layout_marginTop="20dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/edtItemNome" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </ScrollView>
@@ -105,5 +94,3 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
-
-
