--- a/app/src/main/res/layout/lista_adapter.xml
+++ b/app/src/main/res/layout/lista_adapter.xml
@@ -6,6 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="12dp"
@@ -13,6 +14,10 @@
         app:cardCornerRadius="15dp"
         app:cardElevation="5dp"
         app:cardBackgroundColor="@color/purple"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?attr/selectableItemBackground"
+        android:contentDescription="Abrir lista"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,8 +26,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:outlineAmbientShadowColor="@color/purple">
-
+            android:background="@drawable/white_background_purple_border">
 
             <TextView
                 android:id="@+id/textTituloLista"
@@ -30,8 +34,9 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
                 android:ellipsize="end"
-                android:maxLines="2"
-                android:textColor="@color/white"
+                android:maxLines="1"
+                android:textSize="24dp"
+                android:textColor="@color/purple"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -39,25 +44,8 @@
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="Titulo" />
 
-            <Button
-                android:id="@+id/btnDetalharLista"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="6dp"
-                android:backgroundTint="@color/purple_lighter"
-                android:text="Detalhar"
-                android:textColor="@color/white"
-                android:layout_marginHorizontal="6dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toEndOf="@+id/textView2"
-                app:layout_constraintTop_toTopOf="parent" />
-
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
